# test_person_

./: CMakeLists.txt  readme.txt
hc32_ddl/: CMakeLists.txt
hc32_ddl/hc32f460/: CMakeLists.txt  README
hc32_ddl/hc32f460/soc/: hc32f460.h
